# linkedin-content-agent

./: .env.example  .gitignore  README.md  pyproject.toml  sitecustomize.py
.github/workflows/: daily_agent.yml  review_capture.yml
config/: voice_profile.json
data/history/: index.json  runs.jsonl
data/outputs/: 20260415-042659-wednesday.json  20260415-042659-wednesday.md  20260415-043459-wednesday.json  20260415-043459-wednesday.md  20260415-044200-wednesday.json  20260415-044200-wednesday.md
data/prompts/: 20260415-042659-wednesday.json  20260415-043459-wednesday.json  20260415-044200-wednesday.json
scripts/: register_daily_task.ps1  run_daily_agent.ps1
src/linkedin_content_agent/: __init__.py  __main__.py  cli.py  config.py  content_strategy.py  day_contracts.py  emailer.py  json_schemas.py  models.py  openai_client.py  pipeline.py  rendering.py  scoring.py  storage.py  truth_engine.py  utils.py  validation.py
src/linkedin_content_agent/sources/: __init__.py  base.py  catalog.py  comment_harvester.py
tests/: test_config.py  test_creator_strategy.py  test_day_contracts.py  test_hook_and_structure_validation.py  test_pipeline.py  test_scoring.py  test_sources.py  test_validation.py
tests/fixtures/feeds/: sample_atom.xml  sample_rss.xml
tests/fixtures/hn/: algolia_search.json  comment_1.json  comment_2.json  story_item.json
tests/fixtures/reddit/: sample_comments.json  sample_hot.json  sample_hot_rss.xml
