[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-content-agent"
version = "0.1.0"
description = "Signal-driven LinkedIn content agent for AI builders"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=2.0.0",
]

[project.scripts]
linkedin-content-agent = "linkedin_content_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
